# threagile-builder

./: .gitignore  .gitpod.yml  DOCUMENTATION.md  HISTORY.md  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.md  README.nl.md  README.rst  README.zh-CN.md  README.zh-TW.md  REFERENCES.md  phpstan.neon  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  documentation.yml  readme.yml  test.yml
200/: README.md
ORIGINAL-threagile-builder/: .gitignore  PARKED_pyproject-toml  README.md  hatch.toml  requirements.txt
ORIGINAL-threagile-builder/src/threagile_builder/: .gitignore  fib.py
ORIGINAL-threagile-builder/src/threagile_builder/config/: config.py
ORIGINAL-threagile-builder/src/threagile_builder/forms/: __init__.py
ORIGINAL-threagile-builder/src/threagile_builder/routes/: __init__.py
ORIGINAL-threagile-builder/src/threagile_builder/utils/: __init__.py
ORIGINAL-threagile-builder/src/threagile_builder/workflows/: build_workflow.py
ORIGINAL-threagile-builder/tests/: conftest.py  test_app.py
docs/source/: api.rst  conf.py  index.rst  usage.rst
threagile-builder/: LICENSE.txt  hatch.toml  package-lock.json  package.json  phpstan.neon  pyproject.toml  requirements.txt
threagile-builder/config/: __init__.py
threagile-builder/src/threagile_builder/: __about__.py  __init__.py  __main__.py  app.py  package-lock.json  package.json  tailwind.config.js
threagile-builder/src/threagile_builder/cli/: __init__.py
threagile-builder/src/threagile_builder/config/: config.py
threagile-builder/src/threagile_builder/docs/: color_categories.md
threagile-builder/src/threagile_builder/forms/: __init__.py  build_form.py
threagile-builder/src/threagile_builder/models/: __init__.py  build_model.py
threagile-builder/src/threagile_builder/routes/: __init__.py  build_routes.py  main_routes.py
threagile-builder/src/threagile_builder/static/js/: app.js
threagile-builder/src/threagile_builder/static/lib/ast/: ast_AnnAssign.js  ast_Assert.js  ast_Assign.js  ast_AuthorDef.js  ast_Break.js  ast_ClassDef.js  ast_Comment.js  ast_Comp.js  ast_Compare.js  ast_Continue.js  ast_Delete.js  ast_Global.js  ast_If.js  ast_IfExp.js  ast_Lambda.js  ast_NameConstant.js  ast_Nonlocal.js  ast_Raise.js  ast_Return.js  ast_Starred.js  ast_Str.js  ast_Subscript.js  ast_ThreatModel.js  ast_Try.js  ast_UnaryOp.js  ast_While.js  ast_Yaml.js  ast_Yield.js  ast_YieldFrom.js
threagile-builder/src/threagile_builder/static/lib/block_mirror/: block_editor.js  block_mirror.css  block_mirror.js  blockly_shims.js  text_editor.js  text_to_blocks.js  toolbars.js
threagile-builder/src/threagile_builder/static/lib/skulpt/: ast.js  astnodes.js  parse_tables.js  skulpt_parser.js  tokenize.js
threagile-builder/src/threagile_builder/templates/: base.html  footer.html  index.html  navbar.html
threagile-builder/src/threagile_builder/utils/: __init__.py  app_utils.py  db_utils.py
threagile-builder/src/threagile_builder/workflows/: __init__.py  build_workflow.py
threagile-builder/tests/: __init__.py  test_app.py  test_cli.py  test_fib.py
