# threagile-builder/pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "threagile-builder"
dynamic = ["version"]
description = 'Threagile Builder application'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
    "hatch",
  "blockly",
  "threagile"
]
authors = [
  { name = "Willem van Heemstra", email = "wvanheemstra@icloud.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",  
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
]

[project.urls]
Documentation = "https://github.com/vanHeemstraSystems/threagile-builder#readme"
Donate = "https://github.com/sponsors/vanHeemstraSystems"
History = "https://github.com/vanHeemstraSystems/threagile-builder/blob/master/HISTORY.md"
Issues = "https://github.com/vanHeemstraSystems/threagile-builder/issues"
Source = "https://github.com/vanHeemstraSystems/threagile-builder"

[tool.hatch.version]
path = "src/threagile_builder/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "flask"
]
[tool.hatch.envs.default.scripts]
app = "python src/threagile_builder/app.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/threagile_builder tests}"

[tool.coverage.run]
source_pkgs = ["threagile_builder", "tests"]
branch = true
parallel = true
omit = [
  "src/threagile_builder/__about__.py",
]

[tool.coverage.paths]
threagile_builder = ["src/threagile_builder", "*/threagile-builder/src/threagile_builder"]
tests = ["tests", "*/threagile-builder/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
